remove handlebars dependency, upgrade to chrome manifest v3, no unsafe execution, added color switcher

--- a/css/style.css
+++ b/css/style.css
@@ -28,17 +28,29 @@ body, input {
   font-family: 'Avenir', 'helvetica neue', helvetica, arial, sans-serif;
 }
 
+
+.onboarding-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px; /* Adjust the space between form elements as needed */
+}
+
+.color-label {
+  color: #B0B5B9;
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+
 .age-label {
   color: #B0B5B9;
-  /* color: #515151; */
   font-size: 1.2rem;
   line-height: 1;
   margin: 0 0 0 2px;
 }
 
 .count {
-  /* color: #494949; */
-  color: #202020;
   margin: 0;
   font-size: 6rem;
   line-height: 1;
@@ -90,7 +102,6 @@ footer {
 
 @media (prefers-color-scheme: dark) {
   body {
-    /* background: #494949; */
     background: #202020;
   }
 
